--- a/index.njk
+++ b/index.njk
@@ -67,7 +67,19 @@
 
         <section>
             <h3 class="serif text-3xl mb-8 italic text-center text-stone-700 underline decoration-1 underline-offset-8">Perspectives</h3>
-            <div class="grid md:grid-cols-3 gap-8">
+            {% for post in collections.blog %}
+<div class="group">
+    <div class="h-48 bg-stone-200 mb-4 overflow-hidden">
+        <img src="{{ post.data.thumbnail }}" class="group-hover:scale-105 transition duration-500 w-full h-full object-cover">
+    </div>
+    <h4 class="text-xl font-bold leading-tight group-hover:text-blue-700">
+        <a href="{{ post.url }}">{{ post.data.title }}</a>
+    </h4>
+    <p class="text-sm mt-2 text-stone-600">
+        By {{ post.data.author }} • {{ post.date | date('MMMM D, YYYY') }}
+    </p>
+</div>
+{% endfor %}
                 <div class="group">
                     <div class="h-48 bg-stone-200 mb-4 overflow-hidden">
                         <img src="https://images.unsplash.com/photo-1541872703-74c5e443d1f9?auto=format&fit=crop&q=80&w=600" class="group-hover:scale-105 transition duration-500">
