--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -22,7 +22,7 @@
             <div class="text-stone-500 flex items-center gap-4">
                 <span>By {{ author }}</span>
                 <span>•</span>
-                <time>{{ date | date('MMMM D, YYYY') }}</time>
+                <time>{{ date }}</time>
             </div>
             {% if thumbnail %}
             <img src="{{ thumbnail }}" class="mt-8 w-full h-auto rounded shadow-sm">
