--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-blue-50 text-gray-900">
 
     {{ content | safe }}
 
